--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-app",
+  "name": "inserm",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://app.inserm.ru/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
