--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "inserm",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://app.inserm.ru/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -27,7 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
