--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.63",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/socket.io-client": "^3.0.0",
     "@types/styled-components": "^5.1.26",
     "antd": "^5.1.2",
     "axios": "^1.2.0",
@@ -19,6 +20,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "use-breakpoint": "^3.0.3",
