--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^5.1.2",
     "axios": "^1.2.0",
+    "papaparse": "^5.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.4.0"
+    "@svgr/webpack": "^6.4.0",
+    "@types/papaparse": "^5.3.7"
   }
 }
