--- a/app.config.json
+++ b/app.config.json
@@ -1,7 +1,7 @@
 {
   "apps": [
     {
-      "name": "react-app-inserm-vite",
+      "name": "react-app-inserm",
       "script": "npx",
       "interpreter": "none",
       "args": "serve -s dist -p 3000"
