--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^6.2.1",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.6",
@@ -27,6 +28,7 @@
     "@types/papaparse": "^5.3.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/socket.io-client": "^3.0.0",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
