--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,3 @@
 VITE_BASE_URL="https://lol.inserm.ru:5001"
+VITE_AINOX_CONNECTOR_CAMPAIGN="ecf6829026cb11a"
+VITE_AINOX_CONNECTOR_PROJECT="["d48aa84c7779bfe"]"
