--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
 VITE_BASE_URL="https://lul.inserm.ru:5001"
-NODE_OPTIONS='--max-old-space-size=1536'
+NODE_OPTIONS="--max-old-space-size=1536"
+VITE_AINOX_CONNECTOR_CAMPAIGN="5eeffdfc498f606"
+VITE_AINOX_CONNECTOR_PROJECT="["96267607a9857ae", "b93d944a83a9ac1", "f334a093ff4dbfa"]"
