--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.1.2",
     "axios": "^1.3.4",
     "papaparse": "^5.4.1",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
@@ -26,6 +27,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@types/node": "^18.15.11",
     "@types/papaparse": "^5.3.7",
+    "@types/pdfmake": "^0.2.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-google-recaptcha": "^2.1.5",
