--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "antd": "^5.1.2",
     "axios": "^1.3.4",
+    "emoji-picker-react": "^4.4.10",
     "papaparse": "^5.4.1",
     "pdfmake": "^0.2.7",
     "react": "^18.2.0",
