--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 VITE_BASE_URL="https://lol.inserm.ru:5001"
 VITE_AINOX_CONNECTOR_CAMPAIGN="ecf6829026cb11a"
+VITE_AINOX_CONNECTOR_CAMPAIGN_RECURENT="f418e3f479f9a16"
 VITE_AINOX_CONNECTOR_PROJECT="["d48aa84c7779bfe"]"
