--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,4 @@
 VITE_BASE_URL="https://lol.inserm.ru:5001"
 VITE_AINOX_CONNECTOR_CAMPAIGN="5eeffdfc498f606"
+VITE_AINOX_CONNECTOR_CAMPAIGN_RECURENT="f418e3f479f9a16"
 VITE_AINOX_CONNECTOR_PROJECT="["96267607a9857ae", "b93d944a83a9ac1", "f334a093ff4dbfa"]"
