--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.1.2",
     "axios": "^1.3.4",
     "emoji-picker-react": "^4.4.10",
+    "moment": "^2.29.4",
     "papaparse": "^5.4.1",
     "pdfmake": "^0.2.7",
     "react": "^18.2.0",
