--- a/.env.staging
+++ b/.env.staging
@@ -1,1 +1,4 @@
 VITE_BASE_URL="https://lol.inserm.ru:5001"
+VITE_AINOX_CONNECTOR_CAMPAIGN="ecf6829026cb11a"
+VITE_AINOX_CONNECTOR_CAMPAIGN_RECURENT="f418e3f479f9a16"
+VITE_AINOX_CONNECTOR_PROJECT="["96267607a9857ae", "b93d944a83a9ac1", "f334a093ff4dbfa"]"
