--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "antd": "^5.1.2",
-    "axios": "^1.3.4",
+    "axios": "^1.6.2",
     "emoji-picker-react": "^4.4.10",
     "moment": "^2.29.4",
     "papaparse": "^5.4.1",
@@ -37,6 +38,6 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.5.1"
   }
 }
